Fixed spacing in nav

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -56,7 +56,7 @@
   }
 
   .navbar-container a {
-    margin-right: 3em;
+    margin-right: 2em;
   }
 
   .navbar-container a:last-child {
